--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,7 +1,7 @@
 .header {
   background-color: #1f1d2b;
-  grid-area: header;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  height: 10vh;
 }
