--- a/src/pages/codelist/CodeSheetPage.module.css
+++ b/src/pages/codelist/CodeSheetPage.module.css
@@ -6,5 +6,19 @@
 }
 
 .main {
+    display: flex;
+}
+
+.main-content {
     margin: 15px;
+    width: 85%;
+}
+
+.codesheetsidebar {
+    width: 15%;
+    height: 99.5%;
+    background-color: #1f1d2b;
+    margin-top: 0.2%;
+    display: flex;
+    flex-direction: column;
 }
