--- a/src/pages/home/components/FilterSection.module.css
+++ b/src/pages/home/components/FilterSection.module.css
@@ -1,4 +1,4 @@
-.filter-section {
+.filter-section__toggles {
   background-color: #9a9ab0;
   padding: 1.5rem;
   margin: 1rem;
@@ -9,7 +9,7 @@
   padding: 1rem;
 }
 
-.filter-section__tag {
+.filter-section__toggle {
   display: flex;
 
   margin-top: 0.75rem;
@@ -21,11 +21,11 @@
   margin-right: 1rem;
 }
 
-.filter-section__tag input[type='checkbox'] {
+.filter-section__toggle input[type='checkbox'] {
   display: none;
 }
 
-.filter-section__tag input[type='checkbox'] + label {
+.filter-section__toggle input[type='checkbox'] + label {
   display: block;
   position: relative;
   width: 3em;
@@ -38,7 +38,7 @@
   -webkit-transition: background 0.1s ease-in-out;
   transition: background 0.1s ease-in-out;
 }
-.filter-section__tag input[type='checkbox'] + label:before {
+.filter-section__toggle input[type='checkbox'] + label:before {
   content: '';
   display: block;
   width: 1.2em;
@@ -53,7 +53,7 @@
   -webkit-transform: rotate(90deg);
   transform: rotate(90deg);
 }
-.filter-section__tag input[type='checkbox']:checked + label:before {
+.filter-section__toggle input[type='checkbox']:checked + label:before {
   background: #47cf73;
   box-shadow: -2px 0px 5px rgba(0, 0, 0, 0.2);
   left: 1.6em;
