--- a/src/pages/home/components/FilterSection.module.css
+++ b/src/pages/home/components/FilterSection.module.css
@@ -1,5 +1,5 @@
 .filter-section__toggles {
-  background-color: #9a9ab0;
+  background-color: #1f1d2b;
   padding: 1.5rem;
   margin: 1rem;
   border-radius: 1rem;
@@ -7,6 +7,7 @@
   font-size: 1.5rem;
   font-weight: bold;
   padding: 1rem;
+  color: white;
 }
 
 .filter-section__toggle {
@@ -25,7 +26,7 @@
   display: none;
 }
 
-.filter-section__toggle input[type='checkbox'] + label {
+.filter-section__toggle input[type='checkbox']+label {
   display: block;
   position: relative;
   width: 3em;
@@ -38,7 +39,8 @@
   -webkit-transition: background 0.1s ease-in-out;
   transition: background 0.1s ease-in-out;
 }
-.filter-section__toggle input[type='checkbox'] + label:before {
+
+.filter-section__toggle input[type='checkbox']+label:before {
   content: '';
   display: block;
   width: 1.2em;
@@ -53,7 +55,8 @@
   -webkit-transform: rotate(90deg);
   transform: rotate(90deg);
 }
-.filter-section__toggle input[type='checkbox']:checked + label:before {
+
+.filter-section__toggle input[type='checkbox']:checked+label:before {
   background: #47cf73;
   box-shadow: -2px 0px 5px rgba(0, 0, 0, 0.2);
   left: 1.6em;
